Add Quiz, Waiting List and Knowledge base features